# 8_ML

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
dashboard/: streamlit_app.py
docker/: DOCKERFILE  docker-compose.yml
models/: lg_churn.pkl
notebooks/: EDA.ipynb  EDA_improved.ipynb  validate_full_data.ipynb
src/api/: main.py  schemas.py
src/data/: feature_engineering.py  preprocessing.py  user_features.json
src/models/: retrain.py  train.py
src/monitoring/: drift_detection.py
src/utils/: config.py
tests/: test_preprocessing.py
