[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Customer churn prediction system"
authors = [{name = "Yasser Jaber", email = "yaser.ahmad.jaber@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"